--- a/.env.development
+++ b/.env.development
@@ -1,7 +1,7 @@
 ENV = 'development'
 
 # 接口地址
-   VUE_APP_BASE_API  = 'http://192.168.15.59:18099'
-#   VUE_APP_BASE_API  = 'https://htapi.baozaoyunyu.com'
+#   VUE_APP_BASE_API  = 'http://192.168.15.59:18099'
+   VUE_APP_BASE_API  = 'https://htapi.baozaoyunyu.com'
 
 
