--- a/.env.development
+++ b/.env.development
@@ -2,6 +2,8 @@ ENV = 'development'
 
 # 接口地址
 #   VUE_APP_BASE_API  = 'http://192.168.15.59:18099'
-   VUE_APP_BASE_API  = 'https://htapi.baozaoyunyu.com'
+#   VUE_APP_BASE_API  = 'http://192.168.15.220:8080'
+   VUE_APP_BASE_API  = 'http://192.168.15.59:8181'
+
 
 
