--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.19.2",
     "clipboard": "^2.0.6",
     "core-js": "^3.6.4",
+    "crypto-js": "^4.0.0",
     "echarts": "^4.7.0",
     "echarts-gl": "^1.1.1",
     "echarts-wordcloud": "^1.1.3",
