--- a/.env.development
+++ b/.env.development
@@ -3,5 +3,6 @@ ENV = 'development'
 # 接口地址
 #   VUE_APP_BASE_API  = 'http://192.168.15.59:18099'
 #   VUE_APP_BASE_API  = 'http://192.168.15.220:8080'
-   VUE_APP_BASE_API  = 'http://192.168.15.59:8181'
+   VUE_APP_BASE_API  = 'https://api.admin.mk.baozaoyunyu.com'
+#   VUE_APP_BASE_API  = 'http://192.168.15.59:8181'
 
