--- a/.env.production
+++ b/.env.production
@@ -1,3 +1,3 @@
 ENV = 'production'
-VUE_APP_BASE_API  = 'https://htapi.baozaoyunyu.com'
+VUE_APP_BASE_API  = 'https://api.admin.mk.baozaoyunyu.com'
 
