--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "echarts-wordcloud": "^1.1.3",
     "element-ui": "^2.13.1",
     "js-cookie": "^2.2.1",
+    "moment": "^2.29.1",
     "normalize.css": "^8.0.1",
     "nprogress": "^0.2.0",
     "path-to-regexp": "^6.1.0",
